fix: banner styles on mobile

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -229,11 +229,11 @@
 
 @media (max-width: 767px) {
   .banner-wrapper {
-    height: 720px;
+    height: 640px;
     max-height: 220px;
   }
   .banner-expanded {
-    max-height: 720px;
+    max-height: 640px;
   }
   .banner {
     background: none;
@@ -241,10 +241,10 @@
       font-size: 3rem;
     }
     &-title-up {
-      transform: translateY(-272px);
+      transform: translateY(-228px);
     }
     .about {
-      bottom: 56px;
+      bottom: 48px;
       &-my {
         &-title {
           font-size: 24px;
@@ -259,7 +259,7 @@
         }
       }
       &-settings {
-        margin-top: 42px;
+        margin-top: 36px;
         &-title {
           font-size: 24px;
           line-height: 64px;
@@ -270,7 +270,7 @@
         }
       }
       &-copyright {
-        margin-top: 122px;
+        margin-top: 72px;
         &-item {
           font-size: 14px;
         }
